--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,27 @@
 }
 .main-header{
     background-color:aqua;
+    display: grid;
+    grid-template-columns: auto 1fr auto;
+}
+.navigation {
+    grid-column-start:3 ;
+    align-self: center;
+    /* example of flex.
+    display:flex;
+    flex-direction: row;
+    */
+}
+.navigation a {
+    padding: 8pt;
+    text-decoration: none;
+    color: black;
+    font-family: arial;
+    font-size: 24px;
+    
+}
+.navigation a:hover {
+    background-color: rgb(103, 250, 250);
 }
 
 body{
